# jpre

./: .gitignore  LICENSE  README.md  compile.sh  rebar.config
crates/jpre/: Cargo.toml
crates/jpre/src/: lib.rs
src/: jpre.app.src  jpre.erl  jpre_melos.erl  jpre_user_dict.erl
test/: jpre_aiueo_tests.erl  jpre_melos_tests.erl  jpre_user_dict_tests.erl
