[package]
name = "jpre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jpre"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.33.0"
jpreprocess-core = "0.9.1"
jpreprocess-njd = "0.9.1"
jpreprocess = "0.9.1"
jlabel = "0.1.4"
jpreprocess-dictionary-builder = "0.9.1"
jpreprocess-dictionary = "0.9.1"
